--- a/cover.css
+++ b/cover.css
@@ -14,6 +14,11 @@ body {
   }
 }
 
+.footer {
+  position: fixed;
+  bottom: 0;
+}
+
 .business-header {
   height: 50vh;
   min-height: 300px;
@@ -22,6 +27,21 @@ body {
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
+}
+
+.business-header-mini {
+  height: 30vh;
+  min-height: 300px;
+  background: url('https://templates.cms-guide.com/48722/images/img-bg-1.jpg') center center no-repeat scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+}
+
+.span3 {
+  height: 100vh;
+  overflow-y: scroll;
 }
 
 .card {
